2009-03-28  Kai Tietz  <kai.tietz@onevision.com>

	* misc/fesetenv.c: Replace _imp__<sym> by __MINGW_IMP_SYMBOL(sym).
	* complex/cpow.c: Likewise.
	* include/internal.h: Likewise.
	* crt/CRT_fp8.c: Likewise.
	* crt/atonexit.c: Likewise.

2009-03-17  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crtexe.c (wmainCRTStartup): Rename it to mainCRTStartup.
	(wWinMainCRTStartup): Rename to wWinMainCRTStartup.
	Make sure that for wmain call __main is called, too.

2009-03-16  Ozkan Sezer  <sezero@users.sourceforge.net>

	* misc/fetestexcept.c: added missing has_sse check.
	* misc/fesetexceptflag.c: likewise.

2009-03-13  Kai Tietz  <kai.tietz@onevision.com>

	* crt/mingw_custom.c (__mingw_get_crt_info): Moved from
	mingw_helpers.c.
	* minw_helpers.c (__mingw_get_crt_info): Removed.
	General check if _DLL was already defined.

2009-03-11  Kai Tietz  <kai.tietz@onevision.com>

	* misc/mingw_usleep.c: New.

2009-03-11  Alexey Pushkin  <Alexey.Pushkin@mererand.com>

	* crt/crtexe.c (_MINGW_INSTALL_DEBUG_MATHERR): Use for
	optional debugging code for _matherr.
	* crt/merr.c (_MINGW_INSTALL_DEBUG_MATHERR): New.
	(_matherr): Show more details for debugging math
	exceptions.

2009-02-27  Kai Tietz  <kai.tietz@onevision.com>

	* crt/mingw_helper.c (__mingw_get_crt_info): Append
	underscores to internal macros __MINGW64_VERSION, ...

2009-02-20  Kai Tietz  <kai.tietz@onevision.com>

	PR/2615526
	* tanhl.c: Add constant padding for 64-bits long double.
	* lgammal.c: Likewise.
	* tgammal.c: Likewise.
	* powl.c: Likewise
	* cephes_mconf.h: Likewise.
	* sinhl.c: Likewise.
	* erfl.c: Likewise.

2009-02-16  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/moldname-msvcrt.def (fstat): Remove.
	(stat): Remove.

2009-02-07  Kai Tietz  <kai.tietz@onevision.com>

	* revstamp.h: New.

2008-11-11  Kai Tietz  <kai.tietz@onevision.com>

	* crt64/pseudo-reloc.c: Support of new pseudo relocation
	version.

2008-09-29  Kai Tietz  <kai.tietz@onevision.com>
